# Threat-Modeling-AI-Agent

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  llm.py  main.py  pipeline.py  prompts.py  redact.py  render_markdown.py  render_mermaid.py  schemas.py  scoring.py  server.py
app/agents/: __init__.py  abuse_writer.py  checklist_writer.py  dfd_builder.py  extractor.py  planner.py  qa_checker.py  stride_analyst.py
examples/: auth_feature.md  payments_webhook.md
tests/: __init__.py  test_mermaid.py  test_redact.py  test_report_structure.py  test_scoring.py
